--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.3",
-    "mongose": "^0.0.2-security"
+    "mongose": "^0.0.2-security",
+    "nodemon": "^3.1.9"
   }
 }
